# driveforge

./: .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  UPDATE.md  pyproject.toml
.claude/: launch.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-iso.yml  integration-test.yml
config/: driveforge-daemon-restart.polkit-rules  driveforge-udev-restart.polkit-rules  driveforge-update.polkit-rules  driveforge-update.sudoers  grading.yaml.example
docs/: _config.yml  index.md
docs/hardware/: index.md  known-issues.md  supported-drives.md  supported-hbas.md
docs/installation/: air-gapped.md  index.md  iso-install.md  manual-install.md
docs/operations/: aborting-drives.md  auto-enroll.md  dashboard-tour.md  fleet.md  hostname-rename.md  identify-led.md  index.md  pull-and-recover.md  self-update.md
docs/reference/: api.md  grading.md  index.md  integration-test-runner.md  pull-recovery.md
driveforge/: __init__.py  __main__.py  cli.py  config.py
driveforge/core/: ata_errors.py  badblocks.py  blinker.py  capabilities.py  diskstats.py  drive.py  drive_advisory.py  drive_class.py  enclosures.py  erase.py  firmware.py  fleet.py  fleet_discovery.py  fleet_protocol.py  fleet_regrade.py  frozen_remediation.py  grading.py  hostname.py  hotplug.py  password_locked_remediation.py  printer.py  process.py  reports.py  sat_passthru.py  self_restart.py  server_info.py  signing.py  smart.py  telemetry.py  throughput.py  timing.py  triage.py  udev_health.py  updates.py  webhook.py
driveforge/daemon/: agent_prune.py  api.py  app.py  fleet_client.py  fleet_server.py  orchestrator.py  state.py
driveforge/data/: firmware_db.yaml
driveforge/db/: models.py  session.py
driveforge/tui/: app.py
driveforge/web/: setup.py  (+1 more)
iso/: Dockerfile  README.md  preseed.cfg
iso-fieldcheck/: Dockerfile
scripts/: build-fieldcheck-iso-docker.sh  build-fieldcheck-iso.sh  build-iso-docker.sh  build-iso.sh  build-offline-bundle.sh  capture-screenshots.py  driveforge-update  driveforge-update-issue.sh  install.sh  make_logo.py
systemd/: driveforge-daemon.service  driveforge-issue.service  driveforge-tui.service  driveforge-udev-restart.service  driveforge-update.service
tests/: conftest.py
(+112 files in other folders)
